<resources>
    <string name="app_name">Mobile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Магазин</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Личный кабинет</string>
    <string name="menu_catalog">Каталог</string>
    <string name="menu_shares">Акции</string>
    <string name="menu_basket">Корзина</string>
    <string name="menu_settings">Настройки</string>
    <string name="nav_registration">Регистрация</string>
    <string name="menu_aboutUs">О нас</string>
    <string name="menu_contacts">Контакты</string>
    <string name="menu_timesheet">Расписание</string>
    <string name="menu_directions">Направления</string>
    <string name="menu_news">Новости</string>
    <string name="employee1_description">Смирнов Александр Петрович\n
        Образование: Екатеринбургское Высшее артиллерийское командное училище, электромеханический факультет, 2000 год\n\n
        Квалификация: КТН, преподаватель высшей школы\n\n
        Кредо: Сидя на спине, отупеешь вдвойне!! Голова - это огромная емкость… Заполняйте ее только полезным материалом\n\n
        Увлечения: Горный туризм, спорт, немного компьютеры и очень много книг
    </string>
    <string name="computer">Занятие для детей и подросков по информационным направлениям\n
        Обучение без скучных лекций. Ученики делятся полученными из пройденного материала знаниями, обсуждают новые темы на занятии,
        а преподаватель направляет эти обсуждения в правильное русло. В результате материал усваивается быстрее, а занятие проходит максимально продуктивно.\n\n
        Цель: Создание собственной онлайн игры\n\n
        Задачи: Основы программирования \n\n
    </string>
    <string name="creative">Занятие для детей и подросков по творческому направлению\n
        Обучение без скучных лекций. Ученики делятся полученными из пройденного материала знаниями, обсуждают новые темы на занятии,
        а преподаватель направляет эти обсуждения в правильное русло. В результате материал усваивается быстрее, а занятие проходит максимально продуктивно.\n\n
        Цель: Создать совершенство в искусстве  \n\n
        Задачи: Помочь обучающему в развитии творческих подтенциалов \n\n
    </string>
    <string name="development">Занятие для детей по развитию интеллекта\n
        Обучение без скучных лекций. Ученики делятся полученными из пройденного материала знаниями, обсуждают новые темы на занятии,
        а преподаватель направляет эти обсуждения в правильное русло. В результате материал усваивается быстрее, а занятие проходит максимально продуктивно.\n\n
        Цель данных развивающих занятий состоит в том, чтобы продвинуть вперед психическое развитие ребенка, совершенствуя его восприятие, внимание, память,
        мышление, речь и двигательную сферу\n\n
        Задачи: Развитие устойчивости внимания, гибкости мышления \n\n
    </string>
    <string name="engineering">Занятие  для детей и подросков по напровлению Инженерия\n
        Обучение без скучных лекций. Ученики делятся полученными из пройденного материала знаниями, обсуждают новые темы на занятии,
        а преподаватель направляет эти обсуждения в правильное русло. В результате материал усваивается быстрее, а занятие проходит максимально продуктивно.\n\n
        Цель: Создать робота.\n\n
        Задачи: Развитие устойчивости внимания, гибкости мышления \n\n
    </string>
    <string name="preparation">Занятие для подростков для подготовки к ГИА и ЕГЭ\n
        Обучение без скучных лекций. Ученики делятся полученными из пройденного материала знаниями, обсуждают новые темы на занятии,
        а преподаватель направляет эти обсуждения в правильное русло. В результате материал усваивается быстрее, а занятие проходит максимально продуктивно.\n\n
        Цель: Набрать на ЕГЭ 100 баллов по каждому предмету.\n\n
        Задачи: Помочь обучающему в решении тестовых и практических заданий ЕГЭ \n\n
    </string>
    <string name="sports">Занятие спортом для детей и подросков \n
        Благодаря занятиям спортом улучшаются сон и память, укрепляются кости и суставы, повышается гибкость позвоночника.\n\n
        Цель: Быть здоровым и сильным! \n\n
        Задачи: Дать ощутимый прилив бодрости и высокую работоспособностью \n\n
    </string>
    <string name="malisheva">Еле́на Васи́льевна Ма́лышева \n
        Благодаря занятиям спортом улучшаются сон и память, укрепляются кости и суставы, повышается гибкость позвоночника.\n\n
        Быть здоровым и сильным! \n\n

    </string>
    <string name="todo">TODO</string>
    <string name="empl1">Смирнов А.П.</string>
    <string name="empl2">Малышева Е.В.</string>
    <string name="test">Test</string>
    <string name="news1">Международный киберспортивный турнир для любителей популярной MOBA игры Dota 2</string>
    <string name="newsbutton1">16 Мая 2016\nВот и пришло время для очередного Международного чемпионата по одной из
        самых популярных игр 21 века Dota 2. Турнир проводится среди любителей и профессионалов
    </string>
    <string name="news2">Естественно-научный лагерь \"Ферма\"</string>
    <string name="newsbutton2">11 Июня 2015\nВот и лето! Пора летнего отдыха. А летний отдых для детей - это лагерь.
    </string>
    <string name="back">Back</string>
</resources>
