<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:title="@string/menu_home"/>
<!--                android:icon="@drawable/ic_menu_camera"-->
        <item
                android:id="@+id/nav_catalog"
                android:title="@string/menu_catalog"/>
<!--                android:icon="@drawable/ic_menu_gallery"-->
        <item
                android:id="@+id/nav_shares"
                android:title="@string/menu_shares"/>
<!--                android:icon="@drawable/ic_menu_slideshow"-->
        <item
                android:id="@+id/nav_basket"
                android:title="@string/menu_basket"/>
<!--                android:icon="@drawable/menu_settings"-->
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/menu_settings"
                android:title="@string/menu_settings"/>
    </group>

</menu>
