<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/mobile_navigation"
            app:startDestination="@+id/nav_news" tools:ignore="InvalidNavigation">

    <fragment
            android:id="@+id/nav_news"
            android:name="com.example.mobile.ui.news.NewsFragment"
            android:label="@string/menu_news"
            tools:layout="@layout/fragment_news"/>

    <fragment
            android:id="@+id/nav_directions"
            android:name="com.example.mobile.ui.contacts.ContactsFragment"
            android:label="@string/menu_directions"
            tools:layout="@layout/fragment_contacts"/>

    <fragment
            android:id="@+id/nav_timesheet"
            android:name="com.example.mobile.ui.timesheet.TimesheetFragment"
            android:label="@string/menu_timesheet"
            tools:layout="@layout/fragment_timesheet"/>

    <fragment
            android:id="@+id/nav_contacts"
            android:name="com.example.mobile.ui.directions.DirectionsFragment"
            android:label="@string/menu_contacts"
            tools:layout="@layout/fragment_directions"/>

    <fragment
            android:id="@+id/nav_aboutus"
            android:name="com.example.mobile.ui.aboutUs.AboutUsFragment"
            android:label="@string/menu_aboutUs"
            tools:layout="@layout/fragment_aboutus"/>


</navigation>